use correct video sample file

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 var req = new XMLHttpRequest();
                 req.responseType = 'arraybuffer';
                 req.addEventListener('load', load);
-                req.open('get', 'output.mp4');
+                req.open('get', 'video.mov');
                 req.send();
             }
         
